Fix sonar issues in abstract trace class (#586)
* Replace the type specification in this constructor call with the diamond
operator ("<>")

Signed-off-by: Aurelien Pupier <apupier@redhat.com>

* use @Override annotation

Signed-off-by: Aurelien Pupier <apupier@redhat.com>

* Reorder the modifiers to comply with the Java Language Specification.

Signed-off-by: Aurelien Pupier <apupier@redhat.com>

* Remove "Boolean" constructor

Signed-off-by: Aurelien Pupier <apupier@redhat.com>